--- a/views/leapingbunny.ejs
+++ b/views/leapingbunny.ejs
@@ -48,11 +48,21 @@
 					</nav>
  -->
 				<!-- Main -->
+				
 					<div id="main">
-						<table>
+					
+							
+						  
+						<table class="order-table">
 							<thead>
 								<tr>
-									<th width="20%">品牌編號</th>
+									<div class="container-1" style="float: right; margin-bottom: 10px; " >
+										<span class="icon"><i class="fa fa-search"></i></span>
+										<input type="search" class="light-table-filter"  data-table="order-table" placeholder="Search..." >
+									</div>
+								</tr>
+								<tr>
+									<th width="20%" style="line-height:50px; ">品牌編號</th>
 									<th width="35%">品牌名稱</th>
 									<!-- <th width="35%">營養分類</th>
 									<th width="15%">單位熱量</th>
@@ -138,6 +148,7 @@
 			<script src="assets/js/breakpoints.min.js"></script>
 			<script src="assets/js/util.js"></script>
 			<script src="assets/js/main.js"></script>
+			<script src="assets/js/ordertable.js"></script>
 
 	</body>
 </html>
