--- a/views/unAuth.ejs
+++ b/views/unAuth.ejs
@@ -33,11 +33,11 @@
             <span class="navbar-brand mb-0 h1">邦妮幫你v0.01</span>
         </nav>
     </header>
-    <div id="banner">
+    <div id="content"  class="container-fluid" style="height: 100vh;">
         <div class="row g-0 text-light justify-content-center align-items-center">
-            <div class="col-lg-6 text-center">
+            <div class="col-lg-6 text-center" style="margin-top: 120px;">
                <!----<h1>邦妮幫你Bunny</h1>---->
-			    <h2>尚未登入, 無法使用此功能!</h2>
+			            <h2>尚未登入, 無法使用此功能!</h2>
                   <!--<a href="pages/learn.ejs" class="btn btn-danger">瞭解更多</a>-->
                   <h5>點擊「登入會員按鈕」進入登入頁面。</h5>
                   <input type="button" onclick="location.href='login'" value="登入會員按鈕" />
@@ -50,7 +50,6 @@
             </div>
         </div>
     </div>
-    <div id="content" class="container-fluid"></div>
 
     <footer class="text-center bg-dark text-white py-2">
 		Copyrights © 2022 All Rights Reserved by Bunny幫你
