--- a/views/index.ejs
+++ b/views/index.ejs
@@ -12,17 +12,17 @@
   <!-- Apple Safari -->
   <meta name="apple-mobile-web-app-capable" content="yes">
   <meta name="apple-mobile-web-app-status-bar-style" content="black">
-  <meta name="apple-mobile-web-app-title" content="WebApp - First App">
-  <link rel="apple-touch-icon" href="images/abou-us.jpg" sizes="57x57">
-  <link rel="apple-touch-icon" href="images/abou-us.jpg" sizes="60x60">
-  <link rel="apple-touch-icon" href="images/abou-us.jpg" sizes="72x72">
-  <link rel="apple-touch-icon" href="images/abou-us.jpg" sizes="76x76">
-  <link rel="apple-touch-icon" href="images/abou-us.jpg" sizes="114x114">
-  <link rel="apple-touch-icon" href="images/abou-us.jpg" sizes="120x120">
-  <link rel="apple-touch-icon" href="images/abou-us.jpg" sizes="144x144">
-  <link rel="apple-touch-icon" href="images/abou-us.jpg" sizes="152x152">
-  <link rel="apple-touch-icon" href="images/abou-us.jpg" sizes="167x167">
-  <link rel="apple-touch-icon" href="images/abou-us.jpg" sizes="180x180">
+  <meta name="apple-mobile-web-app-title" content="Bunny幫你">
+  <!-- <link rel="apple-touch-icon" href="images/abou-us.jpg" sizes="57x57"> -->
+  <!-- <link rel="apple-touch-icon" href="images/abou-us.jpg" sizes="60x60"> -->
+  <!-- <link rel="apple-touch-icon" href="images/abou-us.jpg" sizes="72x72"> -->
+  <!-- <link rel="apple-touch-icon" href="images/abou-us.jpg" sizes="76x76"> -->
+  <!-- <link rel="apple-touch-icon" href="images/abou-us.jpg" sizes="114x114"> -->
+  <!-- <link rel="apple-touch-icon" href="images/abou-us.jpg" sizes="120x120"> -->
+  <!-- <link rel="apple-touch-icon" href="images/abou-us.jpg" sizes="144x144"> -->
+  <!-- <link rel="apple-touch-icon" href="images/abou-us.jpg" sizes="152x152"> -->
+  <!-- <link rel="apple-touch-icon" href="images/abou-us.jpg" sizes="167x167"> -->
+  <!-- <link rel="apple-touch-icon" href="images/abou-us.jpg" sizes="180x180"> -->
 </head>
 <title>Bunny幫你</title>
 
