--- a/public/assets/css/allbrand.css
+++ b/public/assets/css/allbrand.css
@@ -81,6 +81,12 @@
 #tab5{
     display: none;
 }
+table {
+    width: 100%;
+    display: block;
+    overflow-x: auto;
+    white-space: nowrap;
+}
 
 
 
