--- a/views/recognition.ejs
+++ b/views/recognition.ejs
@@ -52,14 +52,10 @@
 
   <body>
     <header class="container">
-      <img
-        src="images/upload.jpg"
-        class="mt-5 rounded-circle mx-auto d-block"
-        id="photo"
-      />
+      <img src="images/upload.jpg" class="mt-5 rounded-circle mx-auto d-block" id="photo"/>
       <h4 class="text-center mt-3"></h4>
-
-<!--      <div id="banner">
+    </header>
+     <!-- <div id="banner">
         <div class="row g-0 text-light justify-content-center align-items-center">
             <div class="col-lg-6 text-center">
                 <h1>請上傳圖片</h1>
@@ -68,7 +64,6 @@
             </div>
         </div>
     </div> -->
-
     <!--主按鈕-->
     <div class="row g-0 text-light justify-content-center align-items-center">
       <div class="col-lg-6 text-center">
@@ -77,7 +72,9 @@
           <input type="submit" value="確定">
         </form>
         <br>
-        <a class="btn btn-outline-light" href="/" role="button">回主頁</a>
+          <a class="btn btn-outline-light" href="/" role="button" style="margin-bottom: 160px;">回主頁</a>
+      </div>
+    </div>
     <!--<ul class="drop-down-menu">
       <li><a href="#">開始上傳</a> 
           <ul>
@@ -89,7 +86,7 @@
               </li>
           </ul>
       </li> -->
-      <br>
+      
 
    <!-- </header>
     <div class="container mt-5">
@@ -147,6 +144,9 @@
     <footer class="text-center text-white py-2">
       Copyrights © 2021 All Rights Reserved
     </footer>-->
+    <footer class="text-center bg-dark text-white py-2">
+      Copyrights © 2022 All Rights Reserved by Bunny幫你
+    </footer>
     <!-- Optional JavaScript -->
     <script src="js/bootstrap.js"></script>
   </body>
