--- a/views/recognitionAns.ejs
+++ b/views/recognitionAns.ejs
@@ -58,7 +58,7 @@
         id="photo"
       />
       <h4 class="text-center mt-3"></h4>
-
+    </header>
 <!--      <div id="banner">
         <div class="row g-0 text-light justify-content-center align-items-center">
             <div class="col-lg-6 text-center">
@@ -72,7 +72,7 @@
     <!--主按鈕-->
     <div class="row g-0 text-light justify-content-center align-items-center">
       <div style="text-align:center">
-        <div>
+        <div style="margin-bottom: 50px;">
             <% if (item.peta == true) { %>
               <h2 class="profile-title">辨識結果為：</h2>
               <h3 class="profile-title"><%= item.b_name %></h3>
@@ -127,6 +127,8 @@
             </div>
             <% } %>
         </div>
+      </div>
+    </div>
     <!--<ul class="drop-down-menu">
       <li><a href="#">開始上傳</a> 
           <ul>
@@ -138,7 +140,7 @@
               </li>
           </ul>
       </li> -->
-      <br>
+     
 
    <!-- </header>
     <div class="container mt-5">
@@ -197,6 +199,9 @@
       Copyrights © 2021 All Rights Reserved
     </footer>-->
     <!-- Optional JavaScript -->
+    <footer class="text-center bg-dark text-white py-2">
+      Copyrights © 2022 All Rights Reserved by Bunny幫你
+    </footer>
     <script src="js/bootstrap.js"></script>
   </body>
 </html>
