--- a/views/recognitionCheck.ejs
+++ b/views/recognitionCheck.ejs
@@ -58,7 +58,7 @@
         id="photo"
       />
       <h4 class="text-center mt-3"></h4>
-
+    </header>
 <!--      <div id="banner">
         <div class="row g-0 text-light justify-content-center align-items-center">
             <div class="col-lg-6 text-center">
@@ -73,8 +73,10 @@
     <div class="row g-0 text-light justify-content-center align-items-center">
       <div class="col-lg-6 text-center">
         <form action="/recognitionAns" enctype="multipart/form-data" method="get" name="form">
-          <input type="submit" value="上傳完成，查看結果">
+          <input type="submit" value="上傳完成，查看結果" style="margin-bottom: 255px;">
         </form>
+      </div>
+    </div>
     <!--<ul class="drop-down-menu">
       <li><a href="#">開始上傳</a> 
           <ul>
@@ -86,7 +88,7 @@
               </li>
           </ul>
       </li> -->
-      <br>
+      
 
    <!-- </header>
     <div class="container mt-5">
@@ -145,6 +147,9 @@
       Copyrights © 2021 All Rights Reserved
     </footer>-->
     <!-- Optional JavaScript -->
+    <footer class="text-center bg-dark text-white py-2">
+      Copyrights © 2022 All Rights Reserved by Bunny幫你
+    </footer>
     <script src="js/bootstrap.js"></script>
   </body>
 </html>
