--- a/views/unAuth.ejs
+++ b/views/unAuth.ejs
@@ -33,7 +33,7 @@
             <span class="navbar-brand mb-0 h1">邦妮幫你v0.01</span>
         </nav>
     </header>
-    <div id="content"  class="container-fluid" style="height: 100vh;">
+    <div id="content"  class="container-fluid" style="height: 555px;">
         <div class="row g-0 text-light justify-content-center align-items-center">
             <div class="col-lg-6 text-center" style="margin-top: 120px;">
                <!----<h1>邦妮幫你Bunny</h1>---->
@@ -45,7 +45,7 @@
                   <br> 
                   <h5>要登記為實驗動物領養人，請先註冊會員(免費)。</h5>
                   <h5>點擊「註冊會員按鈕」後開始進行註冊。</h5>
-                  <input type="button" onclick="location.href='register'" value="註冊會員按鈕" />
+                  <input type="button" onclick="location.href='register'" value="註冊會員按鈕"  />
 
             </div>
         </div>
