--- a/public/assets/css/allbrand.css
+++ b/public/assets/css/allbrand.css
@@ -84,8 +84,8 @@
 table {
     width: 100%;
     display: block;
-    overflow-x: auto;
-    white-space: nowrap;
+    /*overflow-x: auto;
+    white-space: nowrap;*/
 }
 
 
