--- a/views/recognition.ejs
+++ b/views/recognition.ejs
@@ -144,9 +144,9 @@
     <footer class="text-center text-white py-2">
       Copyrights © 2021 All Rights Reserved
     </footer>-->
-    <footer class="text-center bg-dark text-white py-2">
+    <!--<footer class="text-center bg-dark text-white py-2">
       Copyrights © 2022 All Rights Reserved by Bunny幫你
-    </footer>
+    </footer>-->
     <!-- Optional JavaScript -->
     <script src="js/bootstrap.js"></script>
   </body>
