--- a/views/recognitionAns.ejs
+++ b/views/recognitionAns.ejs
@@ -199,9 +199,9 @@
       Copyrights © 2021 All Rights Reserved
     </footer>-->
     <!-- Optional JavaScript -->
-    <footer class="text-center bg-dark text-white py-2">
+    <!--<footer class="text-center bg-dark text-white py-2">
       Copyrights © 2022 All Rights Reserved by Bunny幫你
-    </footer>
+    </footer>-->
     <script src="js/bootstrap.js"></script>
   </body>
 </html>
