--- a/views/index.ejs
+++ b/views/index.ejs
@@ -13,16 +13,15 @@
   <meta name="apple-mobile-web-app-capable" content="yes">
   <meta name="apple-mobile-web-app-status-bar-style" content="black">
   <meta name="apple-mobile-web-app-title" content="Bunny幫你">
-  <!-- <link rel="apple-touch-icon" href="images/abou-us.jpg" sizes="57x57"> -->
-  <!-- <link rel="apple-touch-icon" href="images/abou-us.jpg" sizes="60x60"> -->
-  <!-- <link rel="apple-touch-icon" href="images/abou-us.jpg" sizes="72x72"> -->
-  <!-- <link rel="apple-touch-icon" href="images/abou-us.jpg" sizes="76x76"> -->
-  <!-- <link rel="apple-touch-icon" href="images/abou-us.jpg" sizes="114x114"> -->
-  <!-- <link rel="apple-touch-icon" href="images/abou-us.jpg" sizes="120x120"> -->
-  <!-- <link rel="apple-touch-icon" href="images/abou-us.jpg" sizes="144x144"> -->
-  <!-- <link rel="apple-touch-icon" href="images/abou-us.jpg" sizes="152x152"> -->
-  <!-- <link rel="apple-touch-icon" href="images/abou-us.jpg" sizes="167x167"> -->
-  <!-- <link rel="apple-touch-icon" href="images/abou-us.jpg" sizes="180x180"> -->
+  <!-- <link rel="apple-touch-icon" href="images/16x16.jpg" sizes="16x16"> -->
+  <!-- <link rel="apple-touch-icon" href="images/24x24.jpg" sizes="24x24"> -->
+  <!-- <link rel="apple-touch-icon" href="images/32x32.jpg" sizes="32x32"> -->
+  <!-- <link rel="apple-touch-icon" href="images/64x64.jpg" sizes="64x64"> -->
+  <!-- <link rel="apple-touch-icon" href="images/192x192.jpg" sizes="192x192"> -->
+  <!-- <link rel="apple-touch-icon" href="images/256x256.jpg" sizes="256x256"> -->
+  <!-- <link rel="apple-touch-icon" href="images/384x384.jpg" sizes="384x384"> -->
+  <!-- <link rel="apple-touch-icon" href="images/512x512.jpg" sizes="512x512"> -->
+
 </head>
 <title>Bunny幫你</title>
 
