--- a/public/assets/css/allbrand.css
+++ b/public/assets/css/allbrand.css
@@ -91,18 +91,21 @@ table {
 #gotop {
     position: fixed;
     border-radius: 50px;
+    border-style: solid;
+	border-color: #ffffff;
+	border-width: 3px !important;
     right: 20px;
     bottom: 30px;
     padding: 10px 16px;
     font-size: 25px;
-    background: #e6a3c9;
-    color: #FAFCFD;
+    background-color: transparent;
+    color: #eeeeee;
     cursor: pointer;
     z-index: 1000;
 }
-#gotop :hover{
-    background:#e6a3c9;
-}
+    #gotop :hover{
+        background-color: transparent;
+    }
 
 /* 頁籤2
 .planList{
