--- a/views/allbrand.ejs
+++ b/views/allbrand.ejs
@@ -29,14 +29,16 @@
 			<ul class="actions">
 				<li><a href="#header" class="button icon solid solo fa-arrow-down scrolly">Continue</a></li>
 			</ul>
-
+			<br />
 			
 		</div>
 
 		<!-- Header -->
 		<header id="header">
 			<a href="/" class="logo">Bunny幫你</a>
+			<span class="date" style="margin-top: 20px;">名單更新日期:<%= items[0].updatetime %></span>
 		</header>
+		
 
 		<!-- Nav -->
 		<!--
