--- a/views/membereditor.ejs
+++ b/views/membereditor.ejs
@@ -87,7 +87,7 @@
                         <table>
                             </select> </td>
                             <td>
-                                <p>*密碼:<br /><input type="text" name="m_password" required value=<%=item.m_password %> >
+                                <p>*密碼:<br /><input type="password" name="m_password" required value=<%=item.m_password %> >
                                 </p>
                             </td>
                         </table>
