--- a/views/allbrand.ejs
+++ b/views/allbrand.ejs
@@ -100,18 +100,13 @@
 							<table class="order-table">
 								<thead>
 									<tr>
-										<th width="75%">
-											<div class="container-1" style="margin-bottom: 10px; " >
-												<span class="icon" style="margin-right: 10px;">品牌名稱</span>
-												<span class="icon">
-												<input type="search" class="light-table-filter"  data-table="order-table" placeholder="Search..." style="border-radius: 20px; margin-right: 10px;">
-											</div>
-										</th>
+										<th width="75%">品牌名稱</th>
 										<th width="10%"></th>
 										<th width="5%"></th>
 										<th width="5%"></th>
 										<th width="5%"></th>
-									</tr>
+									</tr>							
+										<input type="search" class="light-table-filter"  data-table="order-table" placeholder="Search..." style="border-radius: 20px; margin-right: 10px; margin-bottom: 15px;">
 								</thead>
 								<tbody>
 									<% for(var i=0; i<items.length; i++) {%>
@@ -148,15 +143,13 @@
 							<table class="order-table">
 								<thead>
 									<tr>
-										<th width="75%">
-												<span class="icon" style="margin-right: 10px;">品牌名稱</span>
-												<input type="search" class="light-table-filter"  data-table="order-table" placeholder="Search..." style="border-radius: 20px; margin-right: 10px;">
-										</th>
+										<th width="75%">品牌名稱</th>
 										<th width="10%"></th>
 										<th width="5%"></th>
 										<th width="5%"></th>
 										<th width="5%"></th>
-									</tr>
+									</tr>							
+										<input type="search" class="light-table-filter"  data-table="order-table" placeholder="Search..." style="border-radius: 20px; margin-right: 10px;  margin-bottom: 15px;">
 								</thead>
 								<tbody>
 									<% for(var i=0; i<items.length; i++) {%>
@@ -193,18 +186,13 @@
 							<table class="order-table">
 								<thead>
 									<tr>
-										<th width="75%">
-											<div class="container-1" style="margin-bottom: 10px; " >
-												<span class="icon" style="margin-right: 10px;">品牌名稱</span>
-												<span class="icon">
-												<input type="search" class="light-table-filter"  data-table="order-table" placeholder="Search..." style="border-radius: 20px; margin-right: 10px;">
-											</div>
-										</th>
+										<th width="75%">品牌名稱</th>
 										<th width="10%"></th>
 										<th width="5%"></th>
 										<th width="5%"></th>
 										<th width="5%"></th>
-									</tr>
+									</tr>							
+										<input type="search" class="light-table-filter"  data-table="order-table" placeholder="Search..." style="border-radius: 20px; margin-right: 10px;  margin-bottom: 15px;">
 								</thead>
 								<tbody>
 									<% for(var i=0; i<items.length; i++) {%>
@@ -241,18 +229,13 @@
 							<table class="order-table">
 								<thead>
 									<tr>
-										<th width="75%">
-											<div class="container-1" style="margin-bottom: 10px; " >
-												<span class="icon" style="margin-right: 10px;">品牌名稱</span>
-												<span class="icon">
-												<input type="search" class="light-table-filter"  data-table="order-table" placeholder="Search..." style="border-radius: 20px; margin-right: 10px;">
-											</div>
-										</th>
+										<th width="75%">品牌名稱</th>
 										<th width="10%"></th>
 										<th width="5%"></th>
 										<th width="5%"></th>
 										<th width="5%"></th>
-									</tr>
+									</tr>							
+										<input type="search" class="light-table-filter"  data-table="order-table" placeholder="Search..." style="border-radius: 20px; margin-right: 10px; margin-bottom: 15px;">
 								</thead>
 								<tbody>
 									<% for(var i=0; i<items.length; i++) {%>
